<resources>
    <string name="app_name">VogoWorks</string>
    <string name="location_permission_no">위치정보 권환을 거부하셨습니다.</string>
    <string name="permission_guide_title">권한 안내</string>
    <string name="permission_guide_text">사용자 핸드폰 GPS 정보를 얻기위해 사용자 권한이 필요합니다.\n</string>
    <string name="ready_to_start_title">시작하기 전에</string>
    <string name="ready_to_start_text">더 나은 서비스 이용을 위해\n동의가 필요한 내용을 확인해주세요</string>
    <string name="location_description">사용자와 패스트파이브 사이 거리를\n측정하기위해 사용됩니다. </string>
    <string name="vogo_works_start">보고웍스 시작하기</string>
    <string name="background_permission_title">백그라운드 권한 설정</string>
    <string name="background_permission_desc">앱을 종료하였을 때에도 위치정보를\n수신받을 수 있도록 권한을 허용해 주세요</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="in_time_title">출근 시간 설정</string>
    <string name="in_Time_desc">설정한 출근 시간 이후일 경우 \n알림을 보냅니다.</string>
    <string name="out_time_title">퇴근 시간 범위 설정</string>
    <string name="out_Time_desc">설정한 퇴근 시간 이후일 경우 \n알림을 보냅니다.</string>를
    <string name="gps_guide_alert_message">현재 위치를 기준 위치로 설정하시겠습니가?</string>
    <string name="gps_setting">설정 중</string>
    <string name="notification_name">알림 이름</string>
    <string name="set_current_location">현재 위치로 설정</string>
    <string name="latitude">위도</string>
    <string name="longitude">경도</string>
    <string name="alarm_condition">알림 조건</string>
    <string name="alarm_time_guide_text_1">알림을 받을 시간 범위를 입력해주세요.</string>
    <string name="location_setting">위치설정</string>
    <string name="current_location_setting">현재 위치로 설정</string>
    <string name="complete">완료</string>
    <string name="location_direction">방향설정</string>
    <string name="location_in_guide">설정된 위치 범위에 들어올 경우 알림을 받게됩니다.</string>
    <string name="location_out_guide">설정된 위치 범위를 벗어나는 경우 알림을 받게됩니다.</string>
    <string name="en_in">IN</string>
    <string name="en_out">OUT</string>
    <string name="cancel">취소</string>
    <string name="confirm">확인</string>
    <string name="location_searching">위치 설정중...</string>
    <string name="please_input_alarm_start_time">알림을 받을 시작시간을 입력해주세요.</string>
    <string name="please_input_alarm_end_time">알림을 받을 종료시간을 입력해주세요.</string>
    <string name="please_input_alarm_location">알림을 받을 위치를 설정해주세요.</string>
</resources>