<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_f0f0f3">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/actionbar_cl"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/back_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="16dp"
                    android:src="@drawable/ic_chevron_left"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/alarm_condition"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <TextView
                    android:id="@+id/alarm_write_complete_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/complete"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="@drawable/color_21252a_6728ff"
                    android:gravity="center"
                    android:paddingHorizontal="16dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:id="@+id/alarm_time_guide_tv_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alarm_time_guide_text_1"
                app:layout_constraintTop_toBottomOf="@+id/actionbar_cl"
                android:layout_marginStart="16dp"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/alarm_time_cl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/alarm_time_guide_tv_1">
                <TextView
                    android:id="@+id/alarm_time_start_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="08:00"
                    android:textColor="@color/color_ccd4d8"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toStartOf="@+id/alarm_time_div"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
                <TextView
                    android:id="@+id/alarm_time_div"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textColor="@color/color_ccd4d8"
                    android:text="     ~     "
                    app:layout_constraintStart_toEndOf="@+id/alarm_time_start_tv"
                    app:layout_constraintEnd_toStartOf="@+id/alarm_time_end_tv"
                    app:layout_constraintTop_toTopOf="parent"/>
                <TextView
                    android:id="@+id/alarm_time_end_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12:00"
                    android:textColor="@color/color_ccd4d8"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/alarm_time_div"
                    android:textSize="24sp"
                    app:layout_constraintTop_toTopOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:id="@+id/alarm_location_setting_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/alarm_time_cl"
                android:text="@string/location_setting"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"/>
            <soup.neumorphism.NeumorphButton
                android:id="@+id/search_location_bt"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintTop_toBottomOf="@+id/alarm_location_setting_title_tv"
                android:layout_marginTop="16dp"
                style="@style/Widget.Neumorph.Button"
                android:gravity="center"
                android:text="@string/current_location_setting"/>
            <TextView
                android:id="@+id/location_latitude_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/search_location_bt"
                tools:text="위도:300"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="4dp"
                android:layout_marginStart="16dp"
                android:textColor="@color/color_252525"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/location_longitude_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/location_latitude_tv"
                android:layout_marginStart="4dp"
                android:textColor="@color/color_252525"
                app:layout_constraintTop_toTopOf="@+id/location_latitude_tv"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/location_direction_title_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location_direction"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@+id/location_latitude_tv"/>
            <soup.neumorphism.NeumorphButton
                android:id="@+id/location_direction_tv"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                style="@style/Widget.Neumorph.CardView"
                app:layout_constraintTop_toBottomOf="@+id/location_direction_title_tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="16dp"
                app:neumorph_shapeType="flat"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/color_fb7474"
                android:text="@string/en_out"/>
            <TextView
                android:id="@+id/location_direction_guide_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_252525"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/location_direction_tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:layout_marginHorizontal="16dp"
                android:text="@string/location_out_guide"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>